# astra-bin

./: README.md
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: icons.ts  main.ts  root.css  style.ts  theme.ts  util.ts  vite-env.d.ts
client/src/components/: Button.ts  Link.ts  Navbar.ts  NotFound.ts  Select.ts  Settings.ts  TextInput.ts  typography.ts
client/src/components/editor/: Editor.ts  ace.ts  mode-list.ts  theme-module.js  theme.ts
client/src/config/: font.ts  index.ts  style.ts
client/src/pages/: About.ts  CreatePaste.ts  Settings.ts  ViewPaste.ts
client/src/routing/: Router.ts  location.ts
worker/: .gitignore  Cargo.toml  wrangler.example.toml
worker/src/: lib.rs  utils.rs
